clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/nested_call_and_member/nested_call_and_member.cbs
// RUN: %clang_cc1 -verify %s

struct sockaddr;

typedef struct v5_adpt_socket {
} v5_adpt_socket_t;

_Owned struct ListNode {
public:
  v5_adpt_socket_t inner;
};

_Owned struct OptionRefMut {
public:
  ListNode * inner;
};

OptionRefMut socket_table_find(int *_Borrow);
ListNode *_Borrow OptionRefMut::unwrap(OptionRefMut *_Borrow this);
ListNode *_Owned AllocSocket();
void accept(int, struct sockaddr *, int *);
void SkAcceptInfoSet(const v5_adpt_socket_t *_Borrow, v5_adpt_socket_t *_Borrow);
void CloseSocket(v5_adpt_socket_t *); 
void use(ListNode *);

void v5_accept(int fd, void *addr, int *addrLen, int *_Borrow p) {
  OptionRefMut o = socket_table_find(p);
  const v5_adpt_socket_t *_Borrow ls = &_Const o.unwrap()->inner; // expected-note {{`o` is borrowed here}}
                                                                
  use(o.inner); // expected-error {{cannot use `o.inner` because it was mutably borrowed}}
               
  ListNode *_Owned t = AllocSocket();
  {
    v5_adpt_socket_t *_Borrow s = &_Mut t->inner;
    accept(fd, (struct sockaddr *)addr, addrLen);
    SkAcceptInfoSet(ls, s); 
  }
  v5_adpt_socket_t *_Borrow s = &_Mut t->inner; // expected-note {{`(*t).inner` is borrowed here}}
  ListNode *t1 = (ListNode *)t; // expected-error {{cannot move out of `t` because it is borrowed}}
  CloseSocket((v5_adpt_socket_t *)s);
}
